Fixed missing overflow hidden for class btn-group

--- a/public/assets/css/workspace.css
+++ b/public/assets/css/workspace.css
@@ -127,6 +127,7 @@ a.btn {
 
 .btn-group {
     /* margin: auto; */
+    overflow: hidden;
     min-width: 0 !important;
     max-width: fit-content;
     border-radius: 8px;
